Bug 143877 - [EMF+] Missing EmfPlusDrawCurve implementation (it is using cardinal spline)
Summary: [EMF+] Missing EmfPlusDrawCurve implementation (it is using cardinal spline)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.5 target:24.2...
Keywords: filter:emf
Depends on:
Blocks: emf-testbed EMF-WMF
  Show dependency treegraph
 
Reported: 2021-08-14 19:58 UTC by Chris Sherlock
Modified: 2023-06-14 13:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Reference EMF+ file from the libuemf project (196.89 KB, image/x-emf)
2021-08-14 19:59 UTC, Chris Sherlock
Details
Test EMF+ reference image in PNG format (578.43 KB, image/png)
2021-08-14 19:59 UTC, Chris Sherlock
Details
Missing beziers - zoomed in area whilst in LibreOffice (18.02 KB, image/png)
2021-08-14 20:00 UTC, Chris Sherlock
Details
Beziers as seen in Office 365 (36.76 KB, image/png)
2021-08-14 20:00 UTC, Chris Sherlock
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2021-08-14 19:58:55 UTC
Description:
LibreOffice does not show bezier lines when opening the libuemf project's reference EMF+ image.

Steps to Reproduce:
Open test_libuemf_p_ref.emf

Actual Results:
Notice the missing beziers

Expected Results:
Should show the beziers


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.3 / LibreOffice Community
Build ID: 2a7ea282da28d665a7dc086360567b4aea27bf08
CPU threads: 4; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Chris Sherlock 2021-08-14 19:59:18 UTC
Created attachment 174287 [details]
Reference EMF+ file from the libuemf project
Comment 2 Chris Sherlock 2021-08-14 19:59:39 UTC
Created attachment 174288 [details]
Test EMF+ reference image in PNG format
Comment 3 Chris Sherlock 2021-08-14 20:00:11 UTC
Created attachment 174289 [details]
Missing beziers - zoomed in area whilst in LibreOffice
Comment 4 Chris Sherlock 2021-08-14 20:00:34 UTC
Created attachment 174290 [details]
Beziers as seen in Office 365
Comment 5 Bartosz 2023-04-24 03:22:47 UTC
Ccardinal spline (https://en.wikipedia.org/wiki/Cubic_Hermite_spline#Cardinal_spline) is a spline with curves that pass smoothly through each of its control points (compared to Bezier Curves: https://en.wikipedia.org/wiki/B%C3%A9zier_curve). The
degree of curvature is defined by a tension parameter. The curve has no sharp corners or abrupt changes.
Comment 6 Commit Notification 2023-06-01 19:17:47 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0b5c0d9e9d6c71d3531a7e1020af1753a50e873e

tdf#143877 EMF+ Implement EmfPlusDrawCurve with cardinal spline

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-06-02 13:26:30 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/62d5a612f1a3c8180c0e5059e8e05e0bedc9629b

tdf#143877 EMF+ Implement EmfPlusDrawCurve with cardinal spline

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-06-12 10:47:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/16b9e0fea72061e27d8fb42c763be74878d05b36

Revert "tdf#143877 EMF+ Implement EmfPlusDrawCurve with cardinal spline"

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-13 10:59:50 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cbb215aa20783523555185c83875ea5d5b94535b

tdf#143877 Fix failing tests caused by floating point precision

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-14 13:14:56 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0e4e10f54dc4218b1a2c8f740173aa3a5d13ad0a

tdf#143877 Fix failing tests caused by floating point precision

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.